# raytracer

./: .gitmodules  CMakeLists.txt
src/: camera.c  camera.h  hittable.h  hittable_list.c  hittable_list.h  main.c  ray.c  ray.h  sphere.c  sphere.h  utilities.h
